test/syntax/pass/causality/7.sync
let node delayed_cond x = y where
  rec y = if x > 0 then (0 fby y) else 0
