test/syntax/fail/causality/4.sync
let node f x = y where
  y = if x > 0 then y else 0
